# cb

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  project.yml
.claude/: settings.json
.claude/skills/execute-review/: SKILL.md
.claude/skills/init-project-docs/: DOCS_PATTERN.md  SKILL.md
.claude/skills/request-review/: SKILL.md
.claude/skills/review/: SKILL.md
.github/workflows/: ci.yml  claude-review-cb-core.yml  claude-review-docs.yml  claude-review-ui.yml  release.yml
CB/: BridgingHeader.h
CB/Resources/: Info.plist
CB/Sources/: AppDelegate.swift  CBApp.swift  ClipboardMonitor.swift  HistoryWindowController.swift  KeychainManager.swift  PasteService.swift  ShortcutManager.swift
CB/Sources/ViewModels/: HistoryViewModel.swift  SelectionState.swift
CB/Sources/Views/: ClipboardItemRow.swift  HistoryPanel.swift  SettingsView.swift  ShortcutRecorderView.swift
claudedocs/: agent-skills-best-practices.md  claude-md-writing-guide.md  docs-directory-guide.md  github-actions.md
crates/cb-core/: Cargo.toml  build.rs
crates/cb-core/src/: lib.rs  models.rs  storage.rs
docs/archive/: initial_plan.md
docs/design/: GUIDE.md  TEMPLATE.md
docs/design/decisions/: 001-technology-stack.md  002-ui-design-system.md  003-database-encryption.md
docs/design/flows/: clipboard_flow.md  paste_flow.md
docs/design/modules/: cb-core.md  ui.md
docs/plans/: 001-mvp-initial-setup.md  GUIDE.md  TEMPLATE.md
docs/review/: FORMAT.md  GUIDE.md  TEMPLATE.md
docs/status/: GUIDE.md  implementation.md  roadmap.md
docs/usecases/: GUIDE.md  TEMPLATE.md
(+6 files in other folders)
