[package]
name = "cb-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
swift-bridge = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled-sqlcipher"] }

[build-dependencies]
swift-bridge-build = "0.1"
